# xAnalyzer

./: .gitignore  AnalyzerApp.cpp  AnalyzerApp.h  AnalyzerFactory.cpp  AnalyzerFactory.h  AnalyzersFactory.cpp  AnalyzersFactory.h  CMakeLists.txt  ClangTidy.cpp  ClangTidy.h  Config.h  Config.h.in  CppCheck.cpp  CppCheck.h  GitPromptApp.cpp  GitPromptApp.h  IAnalyzer.h  Log.cpp  Log.h  Main.cpp  README.md  TODO.md  UML.odg  dependencies_install.sh  eclipse.sh  libs_install.sh  xAnalyzer.sh  xAnalyzerApp.cpp  xAnalyzerApp.h
Analyzers/: AnalyzerDataIn.cpp  AnalyzerDataIn.h  AnalyzerDataOut.cpp  AnalyzerDataOut.h  ClangTidy.cpp  ClangTidy.h  CppCheck.cpp  CppCheck.h  IAnalyzer.cpp  IAnalyzer.h
Tests/: Test_1.cpp
